feat: update gui

--- a/web-packages/devtools/src/styles/layout.scss
+++ b/web-packages/devtools/src/styles/layout.scss
@@ -11,6 +11,8 @@
   font-family: Helvetica, Arial, sans-serif;
   color: rgba(255, 255, 255, 0.6);
   font-size: 1em;
+
+  background-color: #333333;
 }
 
 .splitpanes__splitter {
